Updated by task 'AUTO_TM_MT_1695910909238'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/80f50f7b4aaa1d12018b488ad72d1bb43ef419f3

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -1,19 +1,16 @@
 ---
 title: 2023 Adobe 믹스 모델러 릴리스 정보 보기
 description: Mix Modeler 릴리스 정보 보기
-source-git-commit: ae1c74ed2edf1e69e7ab77d16aba797921c14ad9
+source-git-commit: df4c1870a5111721f294672ee78b82c746f53ce1
 workflow-type: tm+mt
-source-wordcount: '31'
-ht-degree: 25%
+source-wordcount: '23'
+ht-degree: 4%
 
 ---
 
 # 2023 Adobe 믹스 모델러 릴리스 노트
 
-## 2023년 9월 {#september2023}
+## 2023년 10월
 
-| 기능 | 설명 | [롤아웃 시작](releases.md) | [일반 가용성](releases.md) |
-| ----------- | ---------- | ------- | ---- |
-| **기능** | 기능 설명. | N/A | 2023년 7월 17일 |
+다음을 참조하십시오 [초기 릴리스 정보](latest.md).
 
-{style="table-layout:auto"}
