--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -1,14 +1,16 @@
 ---
-title: 2023 Adobe 믹스 모델러 릴리스 정보 보기
+title: 2023 Mix Modeler 릴리스 정보 보기
 description: Mix Modeler 릴리스 정보 보기
-source-git-commit: df4c1870a5111721f294672ee78b82c746f53ce1
+feature-set: Experience Cloud
+feature: Release Notes
+source-git-commit: 08cfd4239f6bcaf885565f3ae04cbd51869e8c00
 workflow-type: tm+mt
-source-wordcount: '23'
+source-wordcount: '21'
 ht-degree: 4%
 
 ---
 
-# 2023 Adobe 믹스 모델러 릴리스 노트
+# 2023 Mix Modeler 릴리스 정보
 
 ## 2023년 10월
 
