Updated by task 'AUTO_TM_MT_1700473501704'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/ec7a001165d6e946607a654ba7109f01ee194754

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -3,10 +3,11 @@ title: 2023 Mix Modeler 릴리스 정보 보기
 description: Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
-source-git-commit: 08cfd4239f6bcaf885565f3ae04cbd51869e8c00
+exl-id: 15ea5864-616e-49e5-a9c7-f9da3b3cff72
+source-git-commit: 73534d1aecb6d1513f6f3b5f1801b497ad73278f
 workflow-type: tm+mt
-source-wordcount: '21'
-ht-degree: 4%
+source-wordcount: '115'
+ht-degree: 7%
 
 ---
 
@@ -14,5 +15,11 @@ ht-degree: 4%
 
 ## 2023년 10월
 
-다음을 참조하십시오 [초기 릴리스 정보](latest.md).
+| 기능 | 설명 | 일반 가용성 |
+|---|---|---|
+| **요약된 데이터 수집** | [요약된 데이터 수집](../ingest-data/overview.md) (예: Experience Platform에서 새로운 요약 클래스를 사용하는 벽으로 둘러싸인 정원 지출 데이터, TV 비행 일정). | 2023년 10월 4일 |
+| **마케팅 투자의 점진적 영향 측정** | [이해](../dashboard/overview.md) 비즈니스 목표 또는 전술적 캠페인 목표 전반에 걸쳐 마케팅이 미치는 ROI 및 영향 증가. | 2023년 10월 4일 |
+| **멀티 터치 속성(MTA) 및 마케팅 믹스 모델링(MMM) 전송 학습** | MMM과 MTA의 통일을 통해 더욱 자신감 있는 결정을 내리세요 [모델](../models/overview.md) 전환 학습을 통해. | 2023년 10월 4일 |
+| **마케팅 투자 시나리오 계획** | 여러 예산 개발 [플랜](../plans/overview.md) 비즈니스에 최적의 결정을 내릴 수 있도록 효과를 비교합니다. | 2023년 10월 4일 |
 
+{style="table-layout:auto"}
