Updated by task 'AUTO_TM_MT_1706884774271'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/6443885eaa26fea73d04db9994bc70334014c53f

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -4,14 +4,29 @@ description: Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
 exl-id: 15ea5864-616e-49e5-a9c7-f9da3b3cff72
-source-git-commit: 73534d1aecb6d1513f6f3b5f1801b497ad73278f
+source-git-commit: 18bb0bb50d5045536a58cb36cc9b99ccb9b17e25
 workflow-type: tm+mt
-source-wordcount: '115'
-ht-degree: 7%
+source-wordcount: '0'
+ht-degree: 0%
 
 ---
 
 # 2023 Mix Modeler 릴리스 정보
+
+## 2023년 11월
+
+
+| 기능 | 설명 | 일반 가용성 |
+|---|---|---|
+| **CSV 다운로드 버튼** | 이제 CSV 다운로드 버튼은 의 일부로 사용할 수 있습니다. [계획 통찰력](../plans/edit.md) 및 [모델 인사이트](../models/insights.md#model-insights). | 2023년 11월 16일 금요일 |
+| **데이터 범위 분류 테이블의 CPA 열** | CPA 열이에 추가됩니다. [데이터 범위 분류](../plans/edit.md) 계획 통찰력의 표. | 2023년 11월 16일 금요일 |
+| **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/edit.md) 시각화가 계획 통찰력에 추가됩니다. | 2023년 11월 16일 금요일 |
+| **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI는 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 금요일 |
+| **모델 다시 점수 매기기** | 트리거 기능이 추가되었습니다. [기존 모델을 사용하여 새 데이터 재채점](../models/overview.md#re-score). | 2023년 11월 16일 금요일 |
+| **업데이트된 기여도 시각화** | 다음 [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights) 는 순서가 지정된 누적 그래프로 업데이트됩니다. | 2023년 11월 16일 금요일 |
+
+{style="table-layout:auto"}
+
 
 ## 2023년 10월
 
