Updated by task 'MD_MANUAL_HANDOFF_1721424749528'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/73877a6debac23fd89cfb0cb3faaf18e62994508

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -6,8 +6,8 @@ feature: Release Notes
 exl-id: 15ea5864-616e-49e5-a9c7-f9da3b3cff72
 source-git-commit: 18bb0bb50d5045536a58cb36cc9b99ccb9b17e25
 workflow-type: tm+mt
-source-wordcount: '0'
-ht-degree: 0%
+source-wordcount: '230'
+ht-degree: 9%
 
 ---
 
@@ -18,12 +18,12 @@ ht-degree: 0%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **CSV 다운로드 버튼** | 이제 CSV 다운로드 버튼은 의 일부로 사용할 수 있습니다. [계획 통찰력](../plans/edit.md) 및 [모델 인사이트](../models/insights.md#model-insights). | 2023년 11월 16일 금요일 |
-| **데이터 범위 분류 테이블의 CPA 열** | CPA 열이에 추가됩니다. [데이터 범위 분류](../plans/edit.md) 계획 통찰력의 표. | 2023년 11월 16일 금요일 |
-| **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/edit.md) 시각화가 계획 통찰력에 추가됩니다. | 2023년 11월 16일 금요일 |
-| **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI는 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 금요일 |
-| **모델 다시 점수 매기기** | 트리거 기능이 추가되었습니다. [기존 모델을 사용하여 새 데이터 재채점](../models/overview.md#re-score). | 2023년 11월 16일 금요일 |
-| **업데이트된 기여도 시각화** | 다음 [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights) 는 순서가 지정된 누적 그래프로 업데이트됩니다. | 2023년 11월 16일 금요일 |
+| **CSV 다운로드 단추** | 이제 CSV 다운로드 단추를 [계획 인사이트](../plans/edit.md) 및 [모델 인사이트](../models/insights.md#model-insights)의 일부로 사용할 수 있습니다. | 2023년 11월 16일 금요일 |
+| 데이터 범위 분석 테이블의 **CPA 열** | CPA 열이 계획 인사이트의 [데이터 범위 분류](../plans/edit.md) 테이블에 추가됩니다. | 2023년 11월 16일 금요일 |
+| **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/edit.md) 시각화가 계획 인사이트에 추가되었습니다. | 2023년 11월 16일 금요일 |
+| **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI가 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 금요일 |
+| **모델 다시 채점** | 기존 모델을 사용하여 [새 데이터의 다시 채점을 트리거하는 기능](../models/overview.md#re-score)이 추가되었습니다. | 2023년 11월 16일 금요일 |
+| **기여도 시각화 업데이트됨** | [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights)이(가) 순서가 지정된 누적 그래프로 업데이트되었습니다. | 2023년 11월 16일 금요일 |
 
 {style="table-layout:auto"}
 
@@ -32,9 +32,9 @@ ht-degree: 0%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **요약된 데이터 수집** | [요약된 데이터 수집](../ingest-data/overview.md) (예: Experience Platform에서 새로운 요약 클래스를 사용하는 벽으로 둘러싸인 정원 지출 데이터, TV 비행 일정). | 2023년 10월 4일 |
-| **마케팅 투자의 점진적 영향 측정** | [이해](../dashboard/overview.md) 비즈니스 목표 또는 전술적 캠페인 목표 전반에 걸쳐 마케팅이 미치는 ROI 및 영향 증가. | 2023년 10월 4일 |
-| **멀티 터치 속성(MTA) 및 마케팅 믹스 모델링(MMM) 전송 학습** | MMM과 MTA의 통일을 통해 더욱 자신감 있는 결정을 내리세요 [모델](../models/overview.md) 전환 학습을 통해. | 2023년 10월 4일 |
-| **마케팅 투자 시나리오 계획** | 여러 예산 개발 [플랜](../plans/overview.md) 비즈니스에 최적의 결정을 내릴 수 있도록 효과를 비교합니다. | 2023년 10월 4일 |
+| **요약된 데이터 수집** | Experience Platform의 새로운 요약 클래스를 사용하여 [요약된 데이터 수집](../ingest-data/overview.md)(예: 벽으로 둘러싸인 정원 지출 데이터, TV 비행 일정). | 2023년 10월 4일 |
+| **마케팅 투자의 점진적 영향 측정** | [비즈니스 목표 또는 전술적 캠페인 목표 전반에 걸쳐 증가하는 ROI와 마케팅의 영향을 파악](../dashboard/overview.md)합니다. | 2023년 10월 4일 |
+| **MTA(Multi Touch Attribution) 및 MMM(Marketing Mix Modeling) 전송 학습** | MMM과 MTA [모델](../models/overview.md)을(를) 통합하고 전환 학습을 통해 더욱 자신감 있는 결정을 내릴 수 있습니다. | 2023년 10월 4일 |
+| **마케팅 투자 시나리오 계획** | 여러 예산 [계획](../plans/overview.md)을 개발하고 효과를 비교하여 비즈니스에 최적의 결정을 내리십시오. | 2023년 10월 4일 |
 
 {style="table-layout:auto"}
