Updated by task 'AUTO_TM_MT_1738917423717'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/c7a75be0f3bca04c5d6192c0593a37c258d79ddd

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -4,10 +4,10 @@ description: 2023 Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
 exl-id: 15ea5864-616e-49e5-a9c7-f9da3b3cff72
-source-git-commit: a4fdfa97e9d548533a22b1b667cf336f37b83395
+source-git-commit: 25eb18443d0bdecdb02c026aec363271618441f5
 workflow-type: tm+mt
 source-wordcount: '231'
-ht-degree: 9%
+ht-degree: 6%
 
 ---
 
@@ -18,12 +18,12 @@ ht-degree: 9%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **CSV 다운로드 단추** | 이제 CSV 다운로드 단추를 [계획 인사이트](../plans/edit.md) 및 [모델 인사이트](../models/insights.md#model-insights)의 일부로 사용할 수 있습니다. | 2023년 11월 16일 금요일 |
-| 데이터 범위 분석 테이블의 **CPA 열** | CPA 열이 계획 인사이트의 [데이터 범위 분류](../plans/edit.md) 테이블에 추가됩니다. | 2023년 11월 16일 금요일 |
-| **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/edit.md) 시각화가 계획 인사이트에 추가되었습니다. | 2023년 11월 16일 금요일 |
-| **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI가 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 금요일 |
-| **모델 다시 채점** | 기존 모델을 사용하여 [새 데이터의 다시 채점을 트리거하는 기능](../models/overview.md#re-score)이 추가되었습니다. | 2023년 11월 16일 금요일 |
-| **기여도 시각화 업데이트됨** | [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights)이(가) 순서가 지정된 누적 그래프로 업데이트되었습니다. | 2023년 11월 16일 금요일 |
+| **CSV 다운로드 단추** | 이제 CSV 다운로드 단추를 [계획 인사이트](../plans/build.md) 및 [모델 인사이트](../models/insights.md#model-insights)의 일부로 사용할 수 있습니다. | 2023년 11월 16일 |
+| 데이터 범위 분석 테이블의 **CPA 열** | CPA 열이 계획 인사이트의 [데이터 범위 분류](../plans/build.md) 테이블에 추가됩니다. | 2023년 11월 16일 |
+| **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/build.md) 시각화가 계획 인사이트에 추가되었습니다. | 2023년 11월 16일 |
+| **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI가 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 |
+| **모델 다시 채점** | 기존 모델을 사용하여 [새 데이터의 다시 채점을 트리거하는 기능](../models/overview.md#re-score)이 추가되었습니다. | 2023년 11월 16일 |
+| **기여도 시각화 업데이트됨** | [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights)이(가) 순서가 지정된 누적 그래프로 업데이트되었습니다. | 2023년 11월 16일 |
 
 {style="table-layout:auto"}
 
