--- a/help/releases/2024.md
+++ b/help/releases/2024.md
@@ -3,10 +3,11 @@ title: 2024 Mix Modeler 릴리스 정보 보기
 description: 2024 Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
-source-git-commit: a4fdfa97e9d548533a22b1b667cf336f37b83395
+exl-id: 1f14ace9-5ebf-4ba4-a248-ce88679186f1
+source-git-commit: 25eb18443d0bdecdb02c026aec363271618441f5
 workflow-type: tm+mt
-source-wordcount: '459'
-ht-degree: 10%
+source-wordcount: '458'
+ht-degree: 9%
 
 ---
 
@@ -16,7 +17,7 @@ ht-degree: 10%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **교육 및 채점 예약** | [모델을 만들기](/help/models/create.md#schedule)할 때와 [모델 인사이트](/help/models/insights.md#edit) 또는 모델 테이블의 [컨텍스트 메뉴](/help/models/overview.md#edit)에서 모델을 편집할 때 모델의 교육 및 채점을 예약할 수 있습니다. | 2024년 10월 21일 |
+| **교육 및 채점 예약** | [모델을 빌드](/help/models/build.md#schedule)할 때와 [모델 인사이트](/help/models/insights.md#edit) 또는 모델 테이블의 [컨텍스트 메뉴](/help/models/overview.md#edit)에서 모델을 편집할 때 모델의 교육 및 점수를 예약할 수 있습니다. | 2024년 10월 21일 |
 | **접점 분류 테이블** | [!UICONTROL Models]에서 [[!UICONTROL Model insights]](/help/models/insights.md#factors) 탭은 이제 추가 [접점 분류](../models/insights.md#touchpoint-breakdown) 테이블을 제공합니다. | 2024년 10월 1일 |
 
 ## 2024년 8월
@@ -36,7 +37,7 @@ ht-degree: 10%
 | **MTA 시각화** | 모델 인사이트는 포괄적인 [MTA 시각화](../models/insights.md#attribution)로 업데이트됩니다. | 2024년 6월 18일 수요일 |
 | **CPA 지표** | CPA(작업당 비용) 지표는 [계획 비교](../plans/compare.md)에서 사용할 수 있습니다. | 2024년 6월 18일 수요일 |
 | **필드 수준 액세스 제어** | 데이터 집합 규칙을 정의할 때 Experience Platform의 [특성 기반 액세스 제어](https://experienceleague.adobe.com/en/docs/experience-platform/access-control/abac/overview)가 [필드 수준](../harmonize-data/dataset-rules.md#field-level-access-control)에 적용됩니다. | 2024년 6월 12일 목요일 |
-| **사전 지식 터치포인트** | [!UICONTROL Configure] 단계에서 지정된 마케팅 접점만 [[!UICONTROL Prior Knowledge]](../models/create.md) 섹션에서 선택할 수 있습니다. | 2024년 6월 12일 목요일 |
+| **사전 지식 터치포인트** | [!UICONTROL Configure] 단계에서 지정된 마케팅 접점만 [[!UICONTROL Prior Knowledge]](../models/build.md) 섹션에서 선택할 수 있습니다. | 2024년 6월 12일 목요일 |
 
 {style="table-layout:auto"}
 
@@ -63,11 +64,11 @@ ht-degree: 10%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **향상된 다운로드** | Microsoft® Excel 형식으로 [전체 모델 인사이트를 다운로드](../models/insights.md)할 수 있습니다. | 2024년 1월 31일 목요일 |
-| **한계 응답 곡선** | [모델 인사이트](../models/insights.md)는 한계 응답 곡선을 표시하는 추가 시각화를 제공합니다. | 2024년 1월 31일 목요일 |
-| **데이터 병합 환경 설정** | 조화된 데이터 세트에 대한 데이터 세트 규칙에 대해 [데이터 병합 환경 설정](../harmonize-data/dataset-rules.md#data-merge-preferences)을 정의할 수 있습니다. | 2024년 1월 31일 목요일 |
-| **사용량 보고서** | 통합 데이터 세트 UI에는 모델 및 전환 사용에 대한 추가 통찰력을 제공하는 추가 [사용 보고서](../harmonize-data/usage-report.md) 탭이 있습니다. | 2024년 1월 31일 목요일 |
-| **계획 통찰력 UI를 업데이트함** | 플랜 인사이트 UI가 업데이트되어 보고할 ROI와 채널을 선택할 수 있습니다. | 2024년 1월 31일 목요일 |
+| **향상된 다운로드** | Microsoft® Excel 형식으로 [전체 모델 인사이트를 다운로드](../models/insights.md)할 수 있습니다. | 2024년 1월 31일 |
+| **한계 응답 곡선** | [모델 인사이트](../models/insights.md)는 한계 응답 곡선을 표시하는 추가 시각화를 제공합니다. | 2024년 1월 31일 |
+| **데이터 병합 환경 설정** | 조화된 데이터 세트에 대한 데이터 세트 규칙에 대해 [데이터 병합 환경 설정](../harmonize-data/dataset-rules.md#data-merge-preferences)을 정의할 수 있습니다. | 2024년 1월 31일 |
+| **사용량 보고서** | 통합 데이터 세트 UI에는 모델 및 전환 사용에 대한 추가 통찰력을 제공하는 추가 [사용 보고서](../harmonize-data/usage-report.md) 탭이 있습니다. | 2024년 1월 31일 |
+| **계획 통찰력 UI를 업데이트함** | 플랜 인사이트 UI가 업데이트되어 보고할 ROI와 채널을 선택할 수 있습니다. | 2024년 1월 31일 |
 
 {style="table-layout:auto"}
 
