Updated by task 'AUTO_TM_MT_1744888506407'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/mix-modeler.en/commit/1814250fd14e74c2301b0da0d97c8afe0d184546

--- a/help/releases/2023.md
+++ b/help/releases/2023.md
@@ -1,17 +1,17 @@
 ---
-title: 2023 Mix Modeler 릴리스 정보 보기
-description: 2023 Mix Modeler 릴리스 정보 보기
+title: 2023년 Mix Modeler 릴리스 정보 보기
+description: 2023년 Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
 exl-id: 15ea5864-616e-49e5-a9c7-f9da3b3cff72
-source-git-commit: 25eb18443d0bdecdb02c026aec363271618441f5
+source-git-commit: 85f9b42a775006cd3566447b2bb9d0a806fa3e73
 workflow-type: tm+mt
 source-wordcount: '231'
 ht-degree: 6%
 
 ---
 
-# 2023 Mix Modeler 릴리스 정보
+# 2023 Mix Modeler 릴리스 노트
 
 ## 2023년 11월
 
@@ -22,7 +22,7 @@ ht-degree: 6%
 | 데이터 범위 분석 테이블의 **CPA 열** | CPA 열이 계획 인사이트의 [데이터 범위 분류](../plans/build.md) 테이블에 추가됩니다. | 2023년 11월 16일 |
 | **예측된 유료 채널 ROI 시각화** | [예측된 유료 채널 ROI](../plans/build.md) 시각화가 계획 인사이트에 추가되었습니다. | 2023년 11월 16일 |
 | **모델 개요 UI 업데이트됨** | [모델 개요](../models/overview.md) UI가 계획 개요 UI에 따라 업데이트됩니다. | 2023년 11월 16일 |
-| **모델 다시 채점** | 기존 모델을 사용하여 [새 데이터의 다시 채점을 트리거하는 기능](../models/overview.md#re-score)이 추가되었습니다. | 2023년 11월 16일 |
+| **모델 다시 검색** | 기존 모델을 사용하여 [새 데이터의 다시 채점을 트리거하는 기능](../models/overview.md#rescore)이 추가되었습니다. | 2023년 11월 16일 |
 | **기여도 시각화 업데이트됨** | [날짜 및 기본 미디어 시각화별 기여도](../models/insights.md#model-insights)이(가) 순서가 지정된 누적 그래프로 업데이트되었습니다. | 2023년 11월 16일 |
 
 {style="table-layout:auto"}
