--- a/help/releases/2024.md
+++ b/help/releases/2024.md
@@ -1,23 +1,23 @@
 ---
-title: 2024 Mix Modeler 릴리스 정보 보기
-description: 2024 Mix Modeler 릴리스 정보 보기
+title: 2024년 Mix Modeler 릴리스 정보 보기
+description: 2024년 Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
 exl-id: 1f14ace9-5ebf-4ba4-a248-ce88679186f1
-source-git-commit: 25eb18443d0bdecdb02c026aec363271618441f5
+source-git-commit: 85f9b42a775006cd3566447b2bb9d0a806fa3e73
 workflow-type: tm+mt
 source-wordcount: '458'
 ht-degree: 9%
 
 ---
 
-# 2024 Mix Modeler 릴리스 정보
+# 2024 Mix Modeler 릴리스 노트
 
 ## 2024년 10월
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **교육 및 채점 예약** | [모델을 빌드](/help/models/build.md#schedule)할 때와 [모델 인사이트](/help/models/insights.md#edit) 또는 모델 테이블의 [컨텍스트 메뉴](/help/models/overview.md#edit)에서 모델을 편집할 때 모델의 교육 및 점수를 예약할 수 있습니다. | 2024년 10월 21일 |
+| **교육 및 채점 예약** | [모델을 빌드](/help/models/build.md#schedule)할 때와 모델 테이블의 [모델 insight](/help/models/insights.md#edit) 또는 [모델의 컨텍스트 메뉴](/help/models/overview.md#edit)에서 모델을 편집할 때 모델의 교육 및 점수를 예약할 수 있습니다. | 2024년 10월 21일 |
 | **접점 분류 테이블** | [!UICONTROL Models]에서 [[!UICONTROL Model insights]](/help/models/insights.md#factors) 탭은 이제 추가 [접점 분류](../models/insights.md#touchpoint-breakdown) 테이블을 제공합니다. | 2024년 10월 1일 |
 
 ## 2024년 8월
@@ -26,8 +26,8 @@ ht-degree: 9%
 |---|---|---|
 | **인자 기여도 인사이트** | [!UICONTROL Models]에서 [[!UICONTROL Factors]](/help/models/insights.md#factors) 탭은 외부 요소 관련 통찰력을 제공합니다. | 2024년 8월 20일 |
 | **한계 응답 곡선** | 이제 Model Insights의 [한계 응답 곡선](/help/models/insights.md#model-insights-1) 시각화는 선택한 데이터 범위의 변경 사항에 따라 곡선 및 해당 값을 업데이트합니다. 추가적으로, 시각화는 한계 단절의 점과 수익률 하락의 점을 보여준다. | 2024년 8월 20일 |
-| **임시 교육 및 채점** | 모델 인터페이스에서 모델 [다시 교육](/help/models/overview.md#re-train), [점수(새 마케팅 데이터의 경우) 또는 다시 점수](/help/models/overview.md#score-or-re-score)를 시작할 수 있습니다. | 2024년 8월 13일 |
-| **정책 적용** | Experience Platform 정책은 데이터 세트 규칙을 구성할 때와 Mix Modeler에서 사용되는 기본 데이터로 레이블을 수정할 때 적용됩니다. 자세한 내용은 [정책](../data-governance/policies.md)을 참조하세요. | 2024년 8월 13일 |
+| **임시 교육 및 채점** | 모델 인터페이스에서 모델 [다시 교육](/help/models/overview.md#retrain), [점수(새 마케팅 데이터의 경우) 또는 다시 검색](/help/models/overview.md#score-or-rescore)을 시작할 수 있습니다. | 2024년 8월 13일 |
+| **정책 적용** | 데이터 세트 규칙을 구성하고 Mix Modeler에서 사용되는 기본 데이터로 레이블을 수정할 때 Experience Platform 정책이 적용됩니다. 자세한 내용은 [정책](../data-governance/policies.md)을 참조하세요. | 2024년 8월 13일 |
 | **데이터 위생** | 데이터 위생 규칙은 소스 데이터를 삭제할 때 준수됩니다. [원본 데이터 집합 삭제](../harmonize-data/dataset-rules.md#delete-a-source-dataset)를 참조하세요. | 2024년 8월 13일 |
 
 ## 2024년 6월
