--- a/help/releases/2024.md
+++ b/help/releases/2024.md
@@ -4,10 +4,10 @@ description: 2024년 Mix Modeler 릴리스 정보 보기
 feature-set: Experience Cloud
 feature: Release Notes
 exl-id: 1f14ace9-5ebf-4ba4-a248-ce88679186f1
-source-git-commit: 85f9b42a775006cd3566447b2bb9d0a806fa3e73
+source-git-commit: 1a9df9f9819d9e0031e58443ec6a9e755a151ba0
 workflow-type: tm+mt
 source-wordcount: '458'
-ht-degree: 9%
+ht-degree: 8%
 
 ---
 
@@ -34,10 +34,10 @@ ht-degree: 9%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **MTA 시각화** | 모델 인사이트는 포괄적인 [MTA 시각화](../models/insights.md#attribution)로 업데이트됩니다. | 2024년 6월 18일 수요일 |
-| **CPA 지표** | CPA(작업당 비용) 지표는 [계획 비교](../plans/compare.md)에서 사용할 수 있습니다. | 2024년 6월 18일 수요일 |
-| **필드 수준 액세스 제어** | 데이터 집합 규칙을 정의할 때 Experience Platform의 [특성 기반 액세스 제어](https://experienceleague.adobe.com/ko/docs/experience-platform/access-control/abac/overview)가 [필드 수준](../harmonize-data/dataset-rules.md#field-level-access-control)에 적용됩니다. | 2024년 6월 12일 목요일 |
-| **사전 지식 터치포인트** | [!UICONTROL Configure] 단계에서 지정된 마케팅 접점만 [[!UICONTROL Prior Knowledge]](../models/build.md) 섹션에서 선택할 수 있습니다. | 2024년 6월 12일 목요일 |
+| **MTA 시각화** | 모델 인사이트는 포괄적인 [MTA 시각화](../models/insights.md#attribution)로 업데이트됩니다. | 2024년 6월 18일 |
+| **CPA 지표** | CPA(작업당 비용) 지표는 [계획 비교](../plans/compare.md)에서 사용할 수 있습니다. | 2024년 6월 18일 |
+| **필드 수준 액세스 제어** | 데이터 집합 규칙을 정의할 때 Experience Platform의 [특성 기반 액세스 제어](https://experienceleague.adobe.com/en/docs/experience-platform/access-control/abac/overview)가 [필드 수준](../harmonize-data/dataset-rules.md#field-level-access-control)에 적용됩니다. | 2024년 6월 12일 |
+| **사전 지식 터치포인트** | [!UICONTROL Configure] 단계에서 지정된 마케팅 접점만 [[!UICONTROL Prior Knowledge]](../models/build.md) 섹션에서 선택할 수 있습니다. | 2024년 6월 12일 |
 
 {style="table-layout:auto"}
 
@@ -56,8 +56,8 @@ ht-degree: 9%
 
 | 기능 | 설명 | 일반 가용성 |
 |---|---|---|
-| **날짜 다시 설명 옵션** | 집계 데이터 세트의 경우 [규칙](../harmonize-data/dataset-rules.md)을(를) 정의할 때 데이터 재진술이 집계인지 대체인지 정의할 수 있습니다. | 2024년 4월 1일 화요일 |
-| **모델 품질 업데이트** | 이제 모델 인사이트의 [모델 품질](/help/models/insights.md)에 모델 평가를 위한 시각화와 모델 맞춤 지표가 있는 테이블이 표시됩니다. | 2024년 4월 1일 화요일 |
+| **날짜 다시 설명 옵션** | 집계 데이터 세트의 경우 [규칙](../harmonize-data/dataset-rules.md)을(를) 정의할 때 데이터 재진술이 집계인지 대체인지 정의할 수 있습니다. | 2024년 4월 1일 |
+| **모델 품질 업데이트** | 이제 모델 인사이트의 [모델 품질](/help/models/insights.md)에 모델 평가를 위한 시각화와 모델 맞춤 지표가 있는 테이블이 표시됩니다. | 2024년 4월 1일 |
 
 
 ## 2024년 1월
@@ -75,5 +75,5 @@ ht-degree: 9%
 
 >[!MORELIKETHIS]
 >
->* [Mix Modeler 소개](https://business.adobe.com/kr/products/experience-platform/planning-and-measurement.html)
+>* [Mix Modeler 소개](https://business.adobe.com/products/experience-platform/planning-and-measurement.html)
 >* [Mix Modeler Experience League 설명서](https://experienceleague.adobe.com/ko/docs/mix-modeler)
